# djangomis

./: .dockerignore  .gitignore  Dockerfile  README.md  autoload.sh  core_data_backup.sh  create_grpaph.sh  json_encode.py  manage.py  misall.json  misbackup.sh  miscore.json  pyproject.toml  requirements.txt  requirements_dev.txt  start.sh
accounting/: admin.py  models.py
accounting/migrations/: 0001_initial.py  0002_auto_20200725_1045.py
dbfiles/: README.md
djangomis/: asgi.py  settings.py  urls.py  wsgi.py
docs/: mis_diagram.drawio
mis/: admin.py  apps.py  models.py  tests.py  tst.py  urls.py  views.py
mis/migrations/: 0001_initial.py  0002_apodoxestypeefka_plirotees.py  0003_auto_20200719_0852.py  0004_auto_20200725_0958.py  0005_auto_20210921_2138.py
mis/static/mis/: tbl.css  tbllandscape.css
mis/templates/mis/: about.html  apd.html  apd_detail.html  erg_create.html  erg_detail.html  erg_edit.html  ergazomenoi.html  fmy.html  home.html  mis.html  mis_detail.html
mispdf/: txt2pdf.py
mispdf/fonts/: DejaVuSansMono-Bold.pkl  DejaVuSansMono.cw127.pkl  DejaVuSansMono.pkl
static/mis/: tbllandscape.css
templates/generic/: base.html
templates/registration/: login.html
users/: admin.py  forms.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_auto_20200808_1343.py
users/templates/users/: base.html  home.html  signup.html
utils/: adeies.py  apd_functions.py  calc.py  foros.py  passwords.py  tests.py  validators.py  ziputil.py
