[tool.poetry]
name = "djangomis"
version = "0.1.0"
description = "Greek payroll system"
authors = ["Ted Lazaros <tedlaz@gmail.com>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
django-crispy-forms = "^1.11.2"
django-extensions = "^3.1.3"
graphene-django = "^2.15.0"
fpdf2 = "^2.3.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pylint = "^2.8.2"
rope = "^0.19.0"
flake8 = "^3.9.1"
autopep8 = "^1.5.6"
black = "^21.4b2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
